# Learning_Rust

./: .gitignore
Core/Class/: basic.ipynb
Core/Class/cli_utils/src/: colors.rs  colors_pvt.rs  config.rs  lib.rs
Core/Class/cli_utils/src/tests/: test_colors.rs
Core/Class/resplit/: Cargo.toml
Core/Class/resplit/src/: main.rs
GUI/Slint/memory/: Cargo.toml
GUI/Slint/memory/src/: main.rs
